@@ -1,5 +1,9 @@
 2006-09-10  David Blacka  <davidb@fury.blacka.com>
 
+	* Added the "KeyInfoTool" command line tool as the start of a tool
+	for decoding DNSKEY information.  Right now, mostly just useful
+	for checking the public exponenent of RSA keys.
+
 	* Added the "-e" option to jdnssec-keygen, to instruct the key
 	generator to use the (common) large exponent in RSA key
 	generation.
